# cpphomework

task5/: task5.cpp
task5/src/myproject/: meson.build  task5.cpp
task6/: task6.cpp
task8/: meson.build
task8/src/myproject/: meson.build  task8.cpp
taskLinux1/: Doxyfile  meson.build
taskLinux1/src/: meson.build
taskLinux1/src/myproject/: meson.build
taskLinux1/src/myproject/2/: main.cpp  meson.build  victor.cpp  victor.h
taskLinux1/src/myproject/3/: cat.h  message.h  tie.h
taskLinux1/src/myproject/4/: Matrix.h
taskLinux1/src/myproject/5/: task5.cpp
taskLinux1/src/myproject/8/: task8.cpp
taskLinux1/src/test/: meson.build
taskLinux1/src/test/3/: tests.cpp
taskLinux1/src/test/4/: meson.build  tests.cpp
taskLinux3/src/: meson.build
taskLinux3/src/myproject/: MyThread.cpp  MyThread.h  meson.build  task11.cpp
taskLinux3/src/myproject/8task/: task8.h
taskLinux4/: README.md  start.sh
taskLinux4/src/myproject/: meson.build
taskLinux4/src/myproject/block_server/: block_server.cpp  meson.build
taskLinux4/src/myproject/client_tester/: client_blocked.h  meson.build  tester.cpp  unblock_server.h  utils.h
taskLinux4/src/myproject/unblock_server/: meson.build  unblockserver.cpp
