myproject_src = files([
    'victor.h',
    'victor.cpp',
    'main.cpp'
])
executable(
    'myproject',
    include_directories: src, # где ищутся заголовочные файлы
    sources: myproject_src, # список исходный файлов
    dependencies: [], # зависимости проекта (если имеются)
    install: true # устанавливать ли файл
)
